--- a/package.json
+++ b/package.json
@@ -6,9 +6,19 @@
     "start": "next start"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.1",
+    "axios": "^1.2.0",
     "next": "latest",
     "react": "^18.2.0",
+    "react-content-loader": "^6.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.7.1",
+    "react-is": "^18.2.0",
+    "react-redux": "^8.0.5",
+    "react-slick": "^0.29.0",
+    "redux": "^4.2.0",
+    "slick-carousel": "^1.8.1",
+    "slugify": "^1.6.5",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
